Update role and location endpoints - locations need testing - will do tomorrow at school
